Update README with project details and setup instructions
Added detailed project description, features, technologies, and instructions for running the JavaFX login page application.